--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.7.7",
+    "flatpickr": "^4.6.13",
     "vue": "^3.4.29",
+    "vue-flatpickr-component": "^11.0.5",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.7.2"
+    "vuetify": "^3.7.3"
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
